--- a/.github/workflows/windows-build.yml
+++ b/.github/workflows/windows-build.yml
@@ -50,6 +50,6 @@ jobs:
 
     - name: Release
       uses: softprops/action-gh-release@v2
-      # if: github.ref_type == 'tag'
+      if: github.ref_type == 'tag'
       with:
         files: application-windows.zip
