--- a/config.ini
+++ b/config.ini
@@ -7,10 +7,11 @@ usage = 0x61
 # Image files location: ./assets/ 
 # More layers can be added by incrementing the layer number
 # Example: layer_10 = my-custom-layer.png
-layer_0 = miryoku-kle-base.png 
-layer_1 = 
-layer_2 =
-layer_3 =
+layer_0 = miryoku-kle-base.png
+# Fallback image
+layer_1 = virtual_keyboard.png  
+layer_2 = virtual_keyboard.png
+layer_3 = virtual_keyboard.png
 layer_4 = miryoku-kle-nav.png 
 layer_5 = miryoku-kle-mouse.png 
 layer_6 = miryoku-kle-media.png 
